# entrypoint

./: .gitignore  entrypoint.py  pyproject.toml  readme.md
test/: test_entrypoint.py
test/resources/: config.yml
test/resources/props/: file1.yml  file2.yml
test/resources/templates/: example.conf.j2  example2.conf.j2
